# 3d_analytics

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  playwright.config.ts  pyproject.toml
.github/workflows/: deploy.yml
backend/: app.py  cli.py  settings.py
backend/api/: deps.py
backend/core/: models.py  quote_service.py  rate_limit.py  security.py
backend/scripts/: seed_users.py
backend/tests/: conftest.py  test_healthz.py
deploy/: Caddyfile  deploy.sh
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/static/: manifest.webmanifest
infra/: .gitignore  README.md  bootstrap.sh.tpl  cloud-init.yaml  duckdns.tf  lightsail.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
migrations/: env.py
migrations/versions/: 0001_baseline.py  0002_quote_items_material_nullable.py  0003_calibration.py  0004_capacity.py  0005_trends.py  0006_llm_radar.py  0007_temporal_meli_oauth.py  0008_keyword_provider.py  0009_openai_key.py  0010_reddit_oauth.py  0011_youtube_key.py  0012_model_source.py  0013_llm_digests.py  0014_material_type_color.py  0015_library_assets.py  0016_quote_retail_mode.py  0017_quote_item_filename_nullable.py  0018_printer_cost_vars.py  0019_digest_auto_toggle.py  0020_material_waste_rates.py  0021_must_change_password.py  0022_spool_color_manufacturer.py  0023_production_events.py  0024_production_suggestions.py  0025_accounting.py  0026_contabil_v2.py  (+3 more)
(+248 files in other folders)
