[project]
name = "three-d-analytics"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "pydantic[email]>=2.10",
  "pydantic-settings>=2.6",
  "python-multipart>=0.0.20",
  "argon2-cffi>=23.1",
  "pyjwt>=2.10",
  "weasyprint>=63.0",
  "jinja2>=3.1",
  "watchfiles>=1.0",
  "python-slugify>=8.0",
  "pytrends>=4.9",
  "pgvector>=0.3",
  "sentence-transformers>=3.0",
  "anthropic>=0.40",
  "google-genai>=1.0",
  "openai>=1.50",
  "slowapi>=0.1.9",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.28",
  "testcontainers[postgres]>=4.8",
  "ruff>=0.8",
  "mypy>=1.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
